--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -223,7 +223,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="GGRIs0+fLH9qcRLQ1TmPxV3i8Asn8KPzzis3sy2zz+9votiu+BKMLdAdHQxQF/R3YqOduJ2Sz82GQmu36inABfs8WN8Bmiq2ZVSVZlpGOfj9pkJzU8bRgc/cuaz0wAId" data-form-email="true">
+                        <input type="hidden" value="T8SWCua2vrlHFGnnZeTmZUqJfoM9gMKU4KI2VEDE6mZrxThQmfw3HAiC66LU+fKb48P+WjkT1oYIAKhuXGyVWdC+ZeWCkunM9bh7SP5LTCzF+pAw+A7N/a6lVgPnbj7i" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
