--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="Dxht++HXdf/lhx6sM60vX/nHsLK/SLqmW68ClBa9GG3ML1xyNhQGKS432rpaOIfablBYJE5PPGI+f/J5Vt/RnXFgo37i+WCu8dihN2K2J+C+m37ilKGyGF3ouBLP6BBs" data-form-email="true">
+                        <input type="hidden" value="ewwdsZJViZ/l7p7+jdv94DdhiZJjnHTyPjeX4z7WUZ2RsqyDi4/Mj266G7/f7PNvA1ipJIA+W+YZubMu9T24zrzX6OArsxCRZ8CLZM3+G9jwnnJERWOaINgW4B20FzFL" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
