--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section" id="testimonials1-1f" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section" id="testimonials1-1f" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 80px;">
 
     
 
@@ -92,24 +92,34 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-lg-4">
 
                     <div class="mbr-testimonial card mbr-testimonial-lg">
                         <div class="card-block"><p>Thomas hat Telematik an der Technischen Universität Graz studiert. Er arbeitet für amerikanische Unternehmen und gibt Kurse für Shopify und E-Commerce.</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/portrait-thomas2-160x160.jpg" class="img-circle"></div>
-                            <div class="mbr-author-name">Thomas Wiesner, DI</div>
+                            <div class="mbr-author-name">Thomas Wiesner</div>
                             <small class="mbr-author-desc">Management, PR, Marketing</small>
                         </div>
                     </div>
-                </div><div class="col-xs-12 col-md-6">
+                </div><div class="col-xs-12 col-lg-4">
 
                     <div class="mbr-testimonial card mbr-testimonial-lg">
                         <div class="card-block"><p>Martin studiert derzeit am MIT in Boston und hat Telematik in Graz studiert. Mit perfekten Englischkenntnissen und langjähriger Erfahrung im Management ist er die optimale Schnittstelle zwischen POS Module, Shopify und Kunden.</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/11836-1183565-th1-600x600.jpg" class="img-circle"></div>
-                            <div class="mbr-author-name">Martin Moschitz, DI</div>
+                            <div class="mbr-author-name">Martin Moschitz</div>
                             <small class="mbr-author-desc">Management, PR, Marketing</small>
+                        </div>
+                    </div>
+                </div><div class="col-xs-12 col-lg-4">
+
+                    <div class="mbr-testimonial card mbr-testimonial-lg">
+                        <div class="card-block"><p>Christian studiert an der Technischen Universität Graz und schreibt gerade an seiner Diplomarbeit. Für POS Module programmiert er das Shopify App.&nbsp;</p></div>
+                        <div class="mbr-author card-footer">
+                            <div class="mbr-author-img"><img src="assets/images/chris6-160x160.png" class="img-circle"></div>
+                            <div class="mbr-author-name">Christian Nösterer</div>
+                            <small class="mbr-author-desc">Programmierung, Shopify Addon</small>
                         </div>
                     </div>
                 </div>
@@ -122,12 +132,11 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-16" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-1h" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-6 lead"><p><strong>Christian Nösterer, BSc.</strong></p><p>Christian studiert an der Technischen Universität Graz und schreibt gerade an seiner Diplomarbeit. Für POS Module programmiert er das Shopify App.&nbsp;</p><p><br></p></div>
-            <div class="col-xs-12 col-md-6 lead"><p><strong>Phillip Stecher</strong></p><p>Phillip programmiert Software für große Hotelketten. Er schreibt die Schnittstelle zur Registrierkassenverordnung für das POS Module.&nbsp;</p></div>
+            <div class="col-xs-12 lead"><p><strong>Phillip Stecher</strong></p><p>Phillip programmiert Software für große Hotelketten. </p><p>Er schreibt die Schnittstelle zur Registrierkassenverordnung für das POS Module.&nbsp;</p></div>
         </div>
     </div>
 
