--- a/preise.html
+++ b/preise.html
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Preis gilt für eine Kassa</span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Unlimitiert erweiterbar, unlimitierte Anzahl an iPads</span><br></li><li class="list-group-item">Einfach selbst bestimmen welche Kassa zu welchem Standort gehört</li><li class="list-group-item">Für kleine Volumen an Bons pro Tag</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Preis gilt für eine Kassa</span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Unlimitiert erweiterbar</span><br></li><li class="list-group-item">Einfach selbst bestimmen welche Kassa zu welchem Standort gehört</li><li class="list-group-item">Für kleine Volumen an Bons pro Tag</li></ul></div>
                       
                     </div>
                 </div>
@@ -145,10 +145,10 @@
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">$</span>
-                            <span class="mbr-price-figure">499</span><small class="mbr-price-term">/mo.</small>
+                            <span class="mbr-price-value"></span>
+                            <span class="mbr-price-figure">a.A</span><small class="mbr-price-term">.</small>
                           </div>
-                          <small class="mbr-plan-price-desc">pro Standort</small>
+                          <small class="mbr-plan-price-desc">Derzeit nicht möglich.</small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -214,7 +214,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Kassen von A-Trust</h4>
                         <h5 class="card-subtitle">Posmodule benutzt A-Trust Lizenzen</h5>
-                        <p class="card-text">Perfekt für Shops mit wenig Bons! Posmodule stellt Kassen ausschließlich über A-Trust bereit und ist für kleine Volumen an Bons pro Kassa pro Tag ausgelegt. Wenn Sie im Schnitt mehr als 20 Bons/Tag drucken kontaktieren Sie bitte unseren Support.</p>
+                        <p class="card-text">Perfekt für Shops mit wenig Bons! Posmodule stellt Kassen ausschließlich über A-Trust bereit und ist für kleine Volumen an Bons pro Kassa pro Tag ausgelegt. Wenn Sie viele Bons am Tag drucken, dann kontaktieren Sie bitte unseren Support.</p>
                         
                     </div>
                 </div>
@@ -250,7 +250,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="TvEPC5PvI7+yZ70BLBnBxxMFcr5gcQmvRNqhwm4wDaubSElqH33b5T8WCte6Xy0nX3dKCyfLKdBhRFlvo9yhwtE6VlJD6fSFQ/m7+oVfZV5SPyK/MODjCWUFnwP4Eoli" data-form-email="true">
+                        <input type="hidden" value="EZCsuSagec8L+nlqokJYe0DNozpnwE/CjSkPz79J0SZGIBxcawhM1/+yCFFnXJq2zjc+fRuJ0qN5vCKXRXjFlf0lFFSl8+hfYcsSsPAebVxmNqTAqEvKk5JCFeLBfvrf" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
