--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -102,13 +102,13 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">$</span>
-                            <span class="mbr-price-figure">49</span><small class="mbr-price-term"></small>
+                            <span class="mbr-price-figure">0</span><small class="mbr-price-term"></small>
                           </div>
                           <small class="mbr-plan-price-desc">Einmalige Gebühr pro Kassa.<br></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Für die Zertifikatbeantragung bei A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort</li><li class="list-group-item">Wird direkt über Shopify abgerechnet (daher in USD).</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;"><strong>ENTFÄLLT FÜR ERSTKUNDEN BIS 17.APRIL! Danach €29.00</strong></span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Für die Zertifikatbeantragung bei A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort</li><li class="list-group-item">Wird direkt über Shopify abgerechnet (daher in USD).</li></ul></div>
                       
                     </div>
                 </div>
@@ -250,7 +250,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="EjC9UAZ9F3r9e8NFaDzfCZ2II3JztP/3kM+6WSDwBDPrqYMItHLM/iEgwN0SH6eMuJ74RKBwC0XVrSZSrgR10HmUhhYAxa0etDuq/Ot5KlWT4/a5nzRGLXyGEVQpwa/J" data-form-email="true">
+                        <input type="hidden" value="6pBsHNNPhJPjvPIAYLVO/9w5ef8ZWunNgjBVCjbRdZR14DvWabjiyWk3OcT4qu10uaQr5pbCmVPvHlux66sTUMOfyU5kYjmjw9KfjROrJIwa16LAnbFBi8qTyQQSnTg3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
