--- a/comingsoon.html
+++ b/comingsoon.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="lBpEQJXLGrYK/R7UnD4hoR+T0qGrTEjZMrOaaqFbGo5NYQZO22Nf8xBEgvH1i6igX24okgsa0+0fMZj6NWfc9VqDp4EMZZ05iZ4Vx/JRBoEbuv5ZkJpHIDkuyltXCTQ+" data-form-email="true">
+                        <input type="hidden" value="u0RaejPGqSWXYgnBEkmsvD+iw809X9a1FD5vubl8mtFy4tDhaE0QOI2L93bnH7LZANKf/IUr0Y2wxfjKt9PmWNR0l+vB65stBPQOeX2KRRCuUnDgp/hghtaDB3MLdOjR" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
