--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="LpzsXvdHuqCi862N2hEKVmD4IxFaIs5zt3lZXHKXxT/jt1Kaqp+pCGndOhs3VQVaZpslmAy7fsoSDsqgzttmyMOWlQlwFNQ3rA+JQpjaFo2Y1kmUF0hfNXqOs712NPp3" data-form-email="true">
+                        <input type="hidden" value="ON6B5pvejg+JUzUoz4Qt9DsAkXUBDNk+boLKIl4PJIOpHZaqQ9BYa4X/PggYNalHBYMm8caJC0zUIM5yHg/29+YBJNbY2s3pHNb5r5loSQUVr6OnrxTC9pGFaCqhFX2W" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
