--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="5S5jwdctqws4r+vzReQNPSPSm7MPgX6dNrKD+FDtZ3Zv69BWuvxVAMMNMHGsy+sC3zlOPOs+j4I3VqI1oDL3Rl7XBiLiCQ65Bf+YPUtz3bn18/tJJ+XCF40zJN1R4Cbt" data-form-email="true">
+                        <input type="hidden" value="R6F1mQYyWj2STt4gSkgXgwrBXKKlKVzIdgRHISfRtn1b9q+WGiAFWviwj2iR3bC0OjuLCECCjInwGk3EoAWo8BX7kexzULfnPPJtkhUgVufcGLkxdt1NMZmTZd+Bk1e8" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
